--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
+    "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.3.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "ts-pattern": "^4.2.1",
-    "typescript": "4.9.5"
+    "typescript": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
@@ -39,6 +41,8 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "babel-loader": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.11"
   }
