--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/parser": "^5.55.0",
     "babel-loader": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.11",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "yup": "^1.1.1"
   }
 }
